--- a/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj
+++ b/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj
@@ -62,9 +62,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\platforms\sound\openal\SoundSystemAL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\platforms\sdl\main.cpp" />
-    <ClCompile Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl_base.cpp" />
-    <ClCompile Include="$(MC_ROOT)\platforms\sdl\desktop\AppPlatform_sdl.cpp" />
+    <ClCompile Include="$(MC_ROOT)\platforms\sdl\sdl2\main.cpp" />
+    <ClCompile Include="$(MC_ROOT)\platforms\sdl\sdl2\base\AppPlatform_sdl2.cpp" />
+    <ClCompile Include="$(MC_ROOT)\platforms\sdl\sdl2\desktop\AppPlatform_sdl2_desktop.cpp" />
     <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\src\stb_image_impl.c" />
     <ClCompile Include="$(MC_ROOT)\platforms\sound\openal\SoundStreamAL.cpp" />
   </ItemGroup>
@@ -72,8 +72,8 @@
     <ClInclude Include="$(MC_ROOT)\compat\KeyCodes.hpp" />
     <ClInclude Include="$(MC_ROOT)\compat\SDLKeyCodes.h" />
     <ClInclude Include="$(MC_ROOT)\platforms\sound\openal\CustomSoundSystem.hpp" />
-    <ClInclude Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl_base.hpp" />
-    <ClInclude Include="$(MC_ROOT)\platforms\sdl\desktop\AppPlatform_sdl.hpp" />
+    <ClInclude Include="$(MC_ROOT)\platforms\sdl\sdl2\base\AppPlatform_sdl2.hpp" />
+    <ClInclude Include="$(MC_ROOT)\platforms\sdl\sdl2\desktop\AppPlatform_sdl2_desktop.hpp" />
     <ClInclude Include="$(MC_ROOT)\platforms\sound\openal\SoundStreamAL.hpp" />
   </ItemGroup>
   <ItemGroup>
