--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,15 @@ on:
 
 jobs:
     linux:
-        name: Linux
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                  - name: SDL 2
+                    flags: '-DREMCPE_PLATFORM=sdl'
+                  - name: SDL 1.2
+                    flags: '-DREMCPE_PLATFORM=sdl1'
+        name: Linux (${{ matrix.name }})
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Repository
@@ -20,12 +28,13 @@ jobs:
                     build-essential \
                     cmake ninja-build \
                     libopenal-dev \
-                    libsdl2-dev zlib1g-dev
+                    libsdl2-dev \
+                    zlib1g-dev
           - name: Build
             run: |
                 mkdir build
                 cd build
-                cmake -GNinja ..
+                cmake -GNinja ${{ matrix.flags }} ..
                 cmake --build .
     wasm:
         name: WASM
@@ -112,33 +121,33 @@ jobs:
                 cd ${{ matrix.directory }}
                 ./gradlew build
     mingw:
-      strategy:
-        fail-fast: false
-        matrix:
-          include:
-            - name: Win32
-              flags: "-DREMCPE_PLATFORM=windows"
-            - name: SDL1
-              flags: "-DREMCPE_PLATFORM=sdl1"
-            - name: SDL2
-              flags: "-DREMCPE_PLATFORM=sdl2"
-      name: MinGW-w64 (${{ matrix.name }})
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout Repository
-          uses: actions/checkout@v4
-          with:
-            submodules: true
-        - name: Install Dependencies
-          run: |
-            sudo apt-get update
-            sudo apt-get install --no-install-recommends -y \
-                build-essential \
-                cmake ninja-build \
-                mingw-w64
-        - name: Build
-          run: |
-            mkdir build
-            cd build
-            cmake -GNinja -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain.cmake ${{ matrix.flags }} ..
-            cmake --build .
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                  - name: Win32
+                    flags: '-DREMCPE_PLATFORM=windows'
+                  - name: SDL1
+                    flags: "-DREMCPE_PLATFORM=sdl1"
+                  - name: SDL2
+                    flags: "-DREMCPE_PLATFORM=sdl2"
+        name: MinGW-w64 (${{ matrix.name }})
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout Repository
+            uses: actions/checkout@v4
+            with:
+                submodules: true
+          - name: Install Dependencies
+            run: |
+                sudo apt-get update
+                sudo apt-get install --no-install-recommends -y \
+                    build-essential \
+                    cmake ninja-build \
+                    mingw-w64
+          - name: Build
+            run: |
+                mkdir build
+                cd build
+                cmake -GNinja -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain.cmake ${{ matrix.flags }} ..
+                cmake --build .
