--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,10 @@ jobs:
                 include:
                   - name: SDL 2
                     flags: '-DREMCPE_PLATFORM=sdl2'
+                    packages: 'libsdl2-dev'
                   - name: SDL 1.2
                     flags: '-DREMCPE_PLATFORM=sdl1'
+                    packages: 'libsdl1.2-dev'
         name: Linux (${{ matrix.name }})
         runs-on: ubuntu-latest
         steps:
@@ -28,8 +30,8 @@ jobs:
                     build-essential \
                     cmake ninja-build \
                     libopenal-dev \
-                    libsdl2-dev \
-                    zlib1g-dev
+                    zlib1g-dev \
+                    ${{ matrix.packages }}
           - name: Build
             run: |
                 mkdir build
@@ -51,7 +53,17 @@ jobs:
           - name: Build
             run: ./build-wasm.sh
     macos:
-        name: macOS
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                  - name: SDL 2
+                    backend_name: 'SDL2'
+                    packages: 'libsdl2'
+                  - name: SDL 1.2
+                    backend_name: 'SDL1'
+                    packages: 'libsdl'
+        name: macOS (${{ matrix.name }})
         runs-on: macos-latest
         steps:
           - name: Checkout Repository
@@ -63,14 +75,14 @@ jobs:
           - name: Install Dependencies
             run: |
                 port selfupdate
-                port install libsdl2 +universal
+                port install ${{ matrix.packages }} +universal
           - name: Build macOS Archive
             run: |
                 cd platforms/macos/projects/Minecraft
-                xcodebuild -scheme "MinecraftClient.SDL2" \
-                -archivePath $RUNNER_TEMP/GitHubActions_MacOS_SDL2.xcarchive \
+                xcodebuild -scheme "MinecraftClient.${{ matrix.backend_name }}" \
+                -archivePath $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive \
                 -sdk macosx \
-                -configuration "Release (Default)" \
+                -configuration "Release [${{ matrix.backend_name }}] (Default)" \
                 -destination generic/platform=macOS \
                 GCC_PREPROCESSOR_DEFINITIONS='$(GCC_PREPROCESSOR_DEFINITIONS)' \
                 -quiet \
