--- a/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj
+++ b/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="$(MC_ROOT)\platforms\sdl\sdl2\desktop\AppPlatform_sdl2_desktop.cpp" />
     <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\src\stb_image_impl.c" />
     <ClCompile Include="$(MC_ROOT)\platforms\sound\openal\SoundStreamAL.cpp" />
+    <ClCompile Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\compat\KeyCodes.hpp" />
@@ -75,6 +76,7 @@
     <ClInclude Include="$(MC_ROOT)\platforms\sdl\sdl2\base\AppPlatform_sdl2.hpp" />
     <ClInclude Include="$(MC_ROOT)\platforms\sdl\sdl2\desktop\AppPlatform_sdl2_desktop.hpp" />
     <ClInclude Include="$(MC_ROOT)\platforms\sound\openal\SoundStreamAL.hpp" />
+    <ClInclude Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Client\Client.vcxproj">
