--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,10 +141,13 @@ jobs:
                 include:
                   - name: Win32
                     flags: '-DREMCPE_PLATFORM=windows'
+                    packages: ''
                   - name: SDL2
                     flags: "-DREMCPE_PLATFORM=sdl2"
+                    packages: ''
                   - name: SDL 1.2
                     flags: "-DREMCPE_PLATFORM=sdl1"
+                    packages: 'libsdl1.2-dev'
         name: MinGW-w64 (${{ matrix.name }})
         runs-on: ubuntu-latest
         steps:
@@ -158,7 +161,8 @@ jobs:
                 sudo apt-get install --no-install-recommends -y \
                     build-essential \
                     cmake ninja-build \
-                    mingw-w64
+                    mingw-w64 \
+                    ${{ matrix.packages }}
           - name: Build
             run: |
                 mkdir build
