Legacy Compat Fixes

--- a/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
@@ -11,6 +11,14 @@
 GCC_PREPROCESSOR_DEFINITIONS_MACOS = USE_SDL SDL_DISABLE_IMMINTRIN_H $(GCC_PREPROCESSOR_DEFINITIONS_GLOBAL)
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS_MACOS)
 
+SDKROOT_MACOS = // Current Mac OS
+//SDKROOT_MACOS = macosx10.4
+SDKROOT = $(SDKROOT_MACOS)
+
+MACOSX_DEPLOYMENT_TARGET_MACOS = // Compiler Default
+//MACOSX_DEPLOYMENT_TARGET_MACOS = 10.4
+MACOSX_DEPLOYMENT_TARGET = $(MACOSX_DEPLOYMENT_TARGET_MACOS)
+
 ARCHS_MACOS_PPC = ppc ppc64 ppc7400 ppc970
 ARCHS_MACOS_X86 = i386 x86_64
 ARCHS_MACOS_ARM = arm64
