--- a/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
@@ -18,5 +18,6 @@ SDKROOT = $(SDKROOT_IOS)
 ARCHS_IOS = armv6 armv7 armv7s arm64
 ARCHS = $(ARCHS_IOS)
 
-IPHONEOS_DEPLOYMENT_TARGET = 5.0 // iOS 3.0
+// Should be raised if Xcode gives ambiguous error
+IPHONEOS_DEPLOYMENT_TARGET = 3.0 // iOS 3.0
 TARGETED_DEVICE_FAMILY = 1,2 // iPhone/iPad
