--- a/platforms/windows/projects/Network/Network.vcxproj
+++ b/platforms/windows/projects/Network/Network.vcxproj
@@ -58,6 +58,7 @@
     <ClCompile Include="$(MC_ROOT)\source\network\ServerSideNetworkHandler.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\PacketUtil.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\RakIO.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\network\packets\AddMobPacket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\network\MinecraftPackets.hpp" />
@@ -68,6 +69,23 @@
     <ClInclude Include="$(MC_ROOT)\source\network\ServerSideNetworkHandler.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\PacketUtil.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\RakIO.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\AddMobPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\AddPlayerPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\ChunkDataPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\LevelDataPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\LoginPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\LoginStatusPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\MessagePacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\MovePlayerPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\PlaceBlockPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\PlayerEquipmentPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\ReadyPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\RemoveBlockPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\RemoveEntityPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\RequestChunkPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\SetTimePacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\StartGamePacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\UpdateBlockPacket.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
