--- a/platforms/windows/projects/Network/Network.vcxproj.filters
+++ b/platforms/windows/projects/Network/Network.vcxproj.filters
@@ -12,15 +12,15 @@
     <Filter Include="Source Files\Packets">
       <UniqueIdentifier>{17fcdc40-f9d5-4520-80db-750f4a2db48a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Packets">
+      <UniqueIdentifier>{218775b3-53f0-43a2-8535-4fb0ba7b50b4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\network\MinecraftPackets.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\network\NetEventCallback.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\network\Packet.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\network\PingedCompatibleServer.hpp">
@@ -37,6 +37,60 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\network\RakIO.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\AddMobPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\Packet.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\LoginPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\LoginStatusPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\ReadyPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\MessagePacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\SetTimePacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\StartGamePacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\AddPlayerPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\RemoveEntityPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\MovePlayerPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\PlaceBlockPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\RemoveBlockPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\UpdateBlockPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\RequestChunkPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\ChunkDataPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\LevelDataPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\PlayerEquipmentPacket.hpp">
+      <Filter>Header Files\Packets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -105,6 +159,9 @@
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\network\RakIO.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\network\packets\AddMobPacket.cpp">
+      <Filter>Source Files\Packets</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
