Move LocalPlayer from World to Client

--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\sound\sound_list.h" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\music_list.h" />
     <ClInclude Include="$(MC_ROOT)\source\client\multiplayer\MultiPlayerLevel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\player\LocalPlayer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -324,6 +325,7 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\Lighting.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\model\ZombieModel.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\multiplayer\MultiPlayerLevel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\player\LocalPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
