--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -175,6 +175,7 @@ add_library(reminecraftpe-core STATIC
     network/packets/MovePlayerPacket.cpp
     network/packets/MoveEntityPacket.cpp
     network/packets/MoveEntityPacket_PosRot.cpp
+    network/packets/EntityEventPacket.cpp
     network/packets/MessagePacket.cpp
     network/ServerSideNetworkHandler.cpp
     network/RakIO.cpp
