--- a/platforms/windows/projects/Network/Network.vcxproj
+++ b/platforms/windows/projects/Network/Network.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="$(MC_ROOT)\source\network\packets\SetEntityDataPacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\EntityEventPacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\SetHealthPacket.cpp" />
+    <ClCompile Include="..\..\..\..\source\network\packets\AnimatePacket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\network\MinecraftPackets.hpp" />
@@ -94,6 +95,7 @@
     <ClInclude Include="$(MC_ROOT)\source\network\packets\SetEntityDataPacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\EntityEventPacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\SetHealthPacket.hpp" />
+    <ClInclude Include="..\..\..\..\source\network\packets\AnimatePacket.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
